src/styles/index.scss
@use 'src/styles/utility' as *;
@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;500;700&family=Ubuntu:wght@400;500;700&display=swap');

/**
 * Any CSS included here will be global. The classic template
 * bundles Infima by default. Infima is a CSS framework designed to
 * work well for content-centric websites.
 */
/* You can override the default Infima variables here. */
/* Note: !important used to override node_modules css classes 
   in order to avoid swizzling the whole component just to modify few classes */

:root {
  --ibm-font-family-base: 'IBM Plex Sans', sans-serif;
  --ubuntu-font-family: 'Ubuntu', sans-serif;
  --ifm-color-primary: #2e8555;
  --ifm-color-primary-dark: #29784c;
  --ifm-color-primary-darker: #277148;
  --ifm-color-primary-darkest: #205d3b;
  --ifm-color-primary-light: #33925d;
  --ifm-color-primary-lighter: #359962;
  --ifm-color-primary-lightest: #3cad6e;
  --ifm-code-font-size: 95%;
  --text-profit-success: #4bb4b3;
  --demo-account: #377cfc;
  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
  --nav-height: 72px;
  --ifm-menu-color: #414652;
  --ifm-menu-link-sublist-icon-2: url(/img/arrow_sidebar.svg);
  --ifm-menu-link-padding-vertical: 9px;
  --doc-sidebar-width: 283px !important;
  --schema-string: #21d169;
  --schema-array: #ff8fc8;
  --schema-number: #acb2ff;
  --schema-integer: #f8c272;
}

/* For readability concerns, you should choose a lighter palette in dark mode. */
[data-theme='dark'] {
  --ifm-color-primary: #25c2a0;
  --ifm-color-primary-dark: #21af90;
  --ifm-color-primary-darker: #1fa588;
  --ifm-color-primary-darkest: #1a8870;
  --ifm-color-primary-light: #29d5b0;
  --ifm-color-primary-lighter: #32d8b4;
  --ifm-color-primary-lightest: #4fddbf;
  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
}

// Be very careful adding new things to the star selector.
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html {
  font-family: var(--ibm-font-family-base);
}

h1,
h2,
h3,
h4,
h5,
h6,
a,
button {
  font-family: var(--ubuntu-font-family);
}

ul li a,
nav a,
nav a div {
  font-family: var(--ubuntu-font-family);
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-weight: bold;
}

.error-message {
  color: var(--colors-coral500) !important;
}

/* reset */
button {
  all: unset;
}

a {
  color: var(--colors-coral500);
  &:hover {
    color: var(--colors-coral500);
  }
}

p,
h1,
h2,
h3,
h4,
h5,
h6 {
  margin: 0;
  padding: 0;
}

h1,
h2 {
  font-family: var(--ubuntu-font-family);
}

html,
body {
  overflow-x: hidden;
}

.swiper {
  padding: 0 rem(4) !important;
  width: rem(32) !important;
  @media screen and (min-width: 600px) {
    width: rem(55) !important;
  }
}

div[class*='admonitionHeading'] {
  font-family: var(--ubuntu-font-family);
}

main[class*='docMainContainer'] .container {
  padding-top: rem(4) !important; // Have to use important since docusaurus does the same.
  margin: 0 rem(4);
}

div[class*='sidebarViewport'] {
  position: fixed;
  svg[class*='expandButtonIcon'] {
    position: absolute;
    left: rem(0.5);
  }
}

.modal-overlay {
  > div {
    z-index: 1000;
  }
  div[role='dialog'] {
    z-index: 1001;
  }
}

.loading {
  position: absolute;
  width: 100%;
  height: fit-content;
  background-color: rgba(0, 0, 0, 0.3);
  display: flex;
  justify-content: center;
  align-items: center;
}

.navbar {
  padding: 0 5%;
  height: var(--nav-height);
  line-height: rem(2);
  @media (max-width: 996px) {
    padding: 0 rem(1.5);
  }
  &__inner .navbar__items:first-child a {
    font-weight: normal;
  }
  &__link {
    &--active,
    &:hover {
      color: var(--colors-coral500);
      text-decoration: none;
    }
  }
  &__brand {
    margin-right: rem(5);
  }
  &__logo {
    width: rem(12);
  }

  .navbar-sidebar {
    ul > div {
      display: none;
    }
  }
}

.navbar__items--right {
  gap: rem(1);
  a {
    font-weight: 700;
  }
}

main[class*='docMainContainer'] .container {
  padding-top: rem(4) !important; // Have to use important since docusaurus does the same.
  margin: 0 rem(4);
  @media (max-width: 768px) {
    margin: 0;
  }
}

.theme-doc-sidebar-container .theme-doc-sidebar-menu {
  margin-top: rem(9);
}

.menu__link {
  font-size: rem(1.4);
  font-weight: var(--ifm-font-weight-normal);
  line-height: rem(2);
}

.menu__caret:before {
  background: var(--ifm-menu-link-sublist-icon-2);
  filter: var(--ifm-menu-link-sublist-icon-filter);
  height: rem(1.2);
  transform: rotateZ(90deg);
  width: rem(0.872);
}

.menu__list-item--collapsed .menu__link--sublist:after,
.menu__list-item--collapsed .menu__caret:before {
  transform: rotateZ(0deg);
}

.menu__link--active,
.menu__link--active:hover {
  color: var(--colors-coral500);
}

.menu__caret {
  margin-right: rem(3.3);
}

[class*='tocCollapsibleButton'] {
  box-sizing: border-box;
  &::after {
    background: var(--ifm-menu-link-sublist-icon-2) !important;
    height: rem(1.2) !important;
    width: rem(0.872) !important;
    transform: rotate(90deg) !important;
  }
}

[class*='tocCollapsibleButtonExpanded']::after {
  transform: rotate(270deg) !important;
}

@media (max-width: 768px) {
  .navbar__logo {
    width: rem(7.4);
  }

  .navbar__toggle {
    width: rem(1.2);
  }
}

.dropdown--right .dropdown__menu {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  gap: 16px;
  top: 51px;
}

.dropdown__menu {
  padding: 24px 24px;
  background-color: var(--colors-greyLight100);
  border-radius: 8px;
  box-shadow: 0 0 20px #0000000d, 0 16px 20px #0000000d;
}

